# HR_Ops

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.backend  Dockerfile.frontend  ENDPOINT_TEST_REPORT.md  Makefile  PHASE1_AUDIT_REPORT.md  README.md  app.py  architecture_brief.md  docker-compose.dev.yml  docker-compose.yml  latency_test.py  nginx.conf  pyproject.toml  requirements.txt  run.bat  run.ps1  run_endpoint_tests.py  start_backend.py  test_alert_run.py  test_api.py  test_config.py  tracker.md
.github/workflows/: deploy-pages.yml
backend/: Dockerfile  README.md  __init__.py  main.py
backend/config/: __init__.py  app_config.yaml  chunking_config.yaml  compliance_config.yaml  compliance_rules.yaml  cost_config.yaml  embed_config.yaml  feature_flags.yaml  guardrails_config.yaml  model_config.yaml  nvidia_config.yaml  roles_config.yaml  settings.py
backend/data/: .policy_metadata.json  anomaly_bandit.pkl  architecture.html  enhanced_employee_records.csv  feedback_history.jsonl  hr_ops.db  integrations_config.json  rl_bandit.pkl  test_hr_ops.db
backend/scratch/: debug_compliance.py
backend/scripts/: check_inactive.py  enhance_and_seed.py  index_policies.py  load_db.py  run_dspy_optimization.py  (+6 more)
data/: rl_bandit.pkl
docs/: architecture.md  plan.md  todo.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
page/: index.html  kt_developer_guide.md  style.css
scripts/: index_policies.py  run_dspy_optimization.py  run_rl_simulation.py
tests/: test_advanced.py  test_api_endpoints.py  test_graph_run.py  test_standard.py
(+179 files in other folders)
